simonsen and mcclellan updates

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -144,28 +144,29 @@
               <h6 class="page-title">Antwan McClellan</h6>
               <p>          
 
-                Assemblymen Erik Simonsen and Antwan McClellan are more accessible than many local candidates in Cumberland County, regularly attending Republican breakfasts and occasionally 
-                participating in meet-and-greet events—an effort that puts them above average compared to the regional status quo. However, their official communication channels still fall 
-                short of delivering clear, publicly accessible policy positions.
+                Assemblymen Erik Simonsen and Antwan McClellan have historically been more accessible than many local candidates in Cumberland County, 
+                regularly attending Republican breakfasts and participating in public meet-and-greet events. That pattern already placed them 
+                above average compared to the regional status quo, where many candidates remain largely invisible between election cycles... or at least 
+                invisible to people who aren't already political insiders.
                 <br>
                 <br>
-                Their joint bio/platform on the Cumberland County Regular Republican Organization website is vague, offering broad themes without detailed explanations or legislative 
-                priorities. A link meant to highlight their voting history instead redirects to general NJ Legislature pages, requiring voters to piece together records themselves rather 
-                than reviewing curated summaries or forward-looking plans.
+                Since the end of the primary election, both have made plans to expand their outreach further heading into the general election season. While 
+                their joint radio interview scheduled for July 1 had to be adjusted—Erik ultimately needed to cancel—Antwan followed through and appeared 
+                live on air. Erik has indicated he will reschedule his radio interview in the near future, and both plan to participate in a longer, 
+                podcast-style interview later in the summer.
                 <br>
                 <br>
-                While they technically remain reachable for those deeply involved in local politics, the barrier to meaningful platform clarity remains high. Compared to Democratic 
-                challengers Brandon Saffold and Carolyn Rush—who responded to outreach, participated in a lengthy interview, and allowed for transparent documentation of their 
-                stances—Simonsen and McClellan have not engaged with our information-gathering process. Their platform and record could be clarified with minimal effort, but no such 
-                cooperation has materialized. However, in the interest of being totally fair, my ability to access Rush and Saffold happened largely in part out of random chance, so 
-                direct comparisons still remain tough.
+                If these commitments materialize, they will be on track to provide a reasonable amount of information and public dialogue before October, 
+                when most voters begin to focus on the race in earnest.                 
                 <br>
                 <br>
-                They are expected to attend a Republican-organized meet and greet in May, but this too was only known through insider channels. In sum: they outperform the average 
-                candidate in local accessibility, but still fall short of the kind of transparency and voter-friendly communication the public deserves.
+                Given the longstanding pattern of inaccessibility that plagues many campaigns related to Cumberland County, InformTheVoteNJ will continue 
+                monitoring closely to see whether these promised interviews and public appearances occur as planned.
                 <br>
                 <br>
-                For these reasons, Simonsen receives an average to slightly above average rating for transparency and accessibility.
+                For now, based on demonstrated efforts to improve communication this cycle, Simonsen and McClellan’s transparency and accessibility merit an 
+                updated rating of average to above average, with cautious optimism that further improvements will follow.
+                
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -205,7 +206,7 @@
              <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on June 10th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
@@ -223,54 +224,24 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
     <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">04/26/25 - 8:30am</li>
-                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>    
-
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">05/10/25 - 8:30am</li>
-                <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>  
-
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>CCRRO Meet n Greet Cedarville Committee Incumbent John Tisa and General Assembly incumbent Antwan McClellan, Cedarville Fire Hall</strong></li>
-                <li class="description">Meet candidates John Tisa and Antwan McClellan</li>
-                <li class="date-and-time">05/21/25 - 4:00pm</li>
-                <li class="location">30 Maple Ave, Cedarville, NJ 08311</li>
-            </ul>
-        </div>  
         
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">05/24/25 - 8:30am</li>
-                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>  
     </details>
+
+    <br>
+
+    <div class="video-box-modal can-sec">
+        <h3 class="video-heading">InformTheVoteNJ Radio Hour Interview</h3>
+
+        <iframe src="https://www.youtube.com/embed/RSsZ_Ptp-jo?si=Bd-R3-0QWQMfRFwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
 
     <br>
 
