--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -47,9 +47,11 @@
                                 <label for="first">County and Municipal Elections</label>
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                                    <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+
+                                    <!-- <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
-                                    <li class="link"><a href="../../../child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
     
                                     <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                     <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
@@ -91,9 +93,10 @@
                                 <label for="fourth">Issues</label>
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                    <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                    <!-- <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
-                                    <li class="link"><a href="../../../child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
                                     <li class="link"><a href="../../../child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/governor_issues.html">Governor Issues</a></li>
