--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -41,6 +41,8 @@
                             <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
@@ -85,6 +87,8 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
+
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
