--- a/child_pages/cc-elections/state_assembly_legislative_district_1_issues.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1_issues.html
@@ -39,9 +39,11 @@
                             <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                                <li class="link"><a href="../cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
-                                <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
 
                                 <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
@@ -75,6 +77,31 @@
                                 <li class="link"><a href="../cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                 <li class="link"><a href="../cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
                                 <li class="link"><a href="../cc-elections/us_president_2024.html">US President</a></li> -->
+                            </div>
+                        </div>
+
+                        <div class="accordion">
+                            <input type="checkbox" name="accordion" id="fourth">
+                            <label for="fourth">Issues</label>
+                            <div class="nested-burger-links">
+                                <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/governor_issues.html">Governor Issues</a></li>
+
+
+                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_senate_issues.html">US Senate Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
                             </div>
                         </div>
 
