quick summaries for each election updated

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -131,23 +131,44 @@
           <h6 class="page-title">State Assembly - Legislative District 1</h6>
           <p>
             
-            This year 2 seats are up for election in the General Assembly for Legislative District 1, which covers all of Cape May County, and parts of Cumberland and 
-            Atlantic counties. The two republican incumbents, Antwan McClellan and Erik Simonsen, are running unopposed in the primary. The democrats are running 3 
-            candidates. Brandon Saffold and Carolyn Rush are running together as part of Team Fulop, where Steven Fulop is running for governor. Another candidate, 
-            Carol Sabo, is a 3rd democrat candidate and she is currently the mayor of West Cape May.
+            This November, voters in LD1 will decide who fills the district’s two Assembly seats, covering all of Cape May County and parts of Cumberland and Atlantic counties.
             <br>
             <br>
-            While the republican incumbents have some info on the Cumberland County Regular Republican Organization's website, and they do regularly make appearances at the 
-            bi-weekly republican breakfasts with brief campaign messages, there is a whole layer of depth they could go into to really lay out what's been going on during 
-            their tenure, how they plan to proceed should they get re-elected, and how they might compare to the democrats in the general election. Hopefully we can 
-            get in touch with them and gain that insight.
+            On the Republican side, Antwan McClellan and Erik Simonsen advanced unopposed. While they’ve consistently attended local Republican breakfasts and maintained a 
+            visible presence, those appearances often slip under the radar for people who aren’t closely tuned in, and even more so now that the breakfasts are for Republicans 
+            only— many regular voters simply want to review clear, comprehensive information when the end of election season arrives.
             <br>
             <br>
-            Meanwhile, we were able to meet up with Carolyn Rush and Brandon Saffold at a local meet n greet with Steven Fulop. They agreed to do a podcast style interview,
-            which we have posted on their pages. We touched on many issues and you can get a good impression of their overall vision and personalities. We plan to do more 
-            correspondence with them as both the primary and general elections progress, as at least one of them will get through to the generals. Unfortunately, after reaching 
-            out to Carol Sabo several different ways, we have yet to hear back from her... though we have been able to recently find her campaign site, which remains to appear as a 
-            work-in-progress.
+            The incumbents efforts are real, and they’re clearly on the right path for the purpose of this site—as long as they follow through. Filling out a questionnaire, 
+            doing an introductory radio interview, and sitting down for a more detailed podcast later in the season doesn’t take much more than an afternoon’s worth of focused work. 
+            That alone would ensure every voter has a consolidated, accessible way to understand where they stand.
+            <br>
+            <br>
+            It’s worth noting that while Antwan has already joined me for a radio interview and Erik plans to do the same, plus both have expressed interest in a longer-form 
+            podcast. So again, as long as the follow-through occurs, voters should have a clear picture from them.
+            <br>
+            <br>
+            On the Democratic side, Carolyn Rush has set the standard for engagement so far. She sat down for a 2.5-hour interview to go through her platform in depth and is 
+            scheduled to appear on the radio show again next week, where we’ll specifically address some of the topics Antwan and I discussed. This kind of ongoing dialogue is 
+            exactly what should be happening in every primary and general election—candidates clearly laying out where they agree, where they differ, and how they plan to 
+            represent their district.
+            <br>
+            <br>
+            Carol Sabo, meanwhile, has been in sporadic contact for over a month about filling out a questionnaire or scheduling an interview, but nothing concrete has 
+            happened yet. The only information I’ve found about her platform came after five separate outreach attempts, and her campaign site doesn't go into much depth. 
+            That said, just like the county Democrats, her accessibility rating could improve dramatically with just an afternoon’s worth of work between now and November.
+            <br>
+            <br>
+            To be clear, I’m not asking any of these candidates to divulge every detail of legislative negotiations or to produce hours of inside baseball on how bills get 
+            passed. I’m asking for something much simpler: clear, easily accessible statements of their priorities and plans—like the campaign sites Senator Testa and Candidate 
+            Perella eventually set up when this project first began.
+            <br>
+            <br>
+            At this point in the election cycle, anything could still happen. Campaigns can ramp up or fall off. New issues can surface. Promises of transparency can become 
+            reality—or remain just that: promises.
+            <br>
+            <br>
+            Either way, I’ll be watching closely so Cumberland County voters don’t have to navigate it all alone.
             <br> 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
