--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -131,26 +131,38 @@
           <h6 class="page-title">State Assembly - Legislative District 3</h6>
           <p>
             
-            The General Assembly race for New Jersey’s 3rd Legislative District features two open seats this year. On the Democratic side, incumbents Heather Simmons and Dave Bailey 
-            are running unopposed in the primary. We reached out to both candidates using the contact information provided by the County Clerk—via email and physical mail, and also 
-            called their legislative offices, who said they would have the candidates reach out to us—but have not yet received a response. As of now, neither candidate has released 
-            a formal campaign platform.
+            The General Assembly race in New Jersey’s 3rd Legislative District features two seats up for election. While this district mostly covers Gloucester and Salem counties, 
+            it includes parts of Cumberland County representing about 17,000 people—so it deserves attention here.
             <br>
             <br>
-            Similarly, the Republican primary is uncontested, with Chris Konawel and Lawrence Moore as the declared candidates. Moore made a brief appearance at a recent Republican 
-            breakfast, where he acknowledged his candidacy but offered limited details about his agenda. Konawel also attended another breakfast and gave a short speech, though 
-            without specific platform messaging. While he accepted our friend request on Facebook, he left our message requesting campaign information “on read”. We also approached 
-            him at the breakfast to make our outreach directly known, though he also has not followed up since. Furthermore, both Moore and Konawell have been left messages at their 
-            respective offices, with no response.
+            On the Republican side, Chris Konawel and Lawrence Moore are running unopposed. Like other local Republicans, they’ve often been accessible through the bi-weekly breakfasts in 
+            the past. But with those meetings now closed to non-Republicans, any updates that might have been shared there are no longer readily available to the wider public.
             <br>
             <br>
-            All four candidates are expected to advance to the general election, making this a critical time for them to begin clearly communicating their platforms to voters. 
-            We encourage each of them to take advantage of the early window to provide accessible, detailed information about their goals and qualifications.
+            I tried to meet both candidates in person to help establish trust and open lines of communication. I attended a Harrison Township meeting specifically hoping to connect with 
+            Lawrence Moore, but he was absent that evening. Some of his colleagues said they would pass along my message and materials, but so far, there has been no reply. This is a 
+            good example of how cumbersome and hit-or-miss the process can be, even when you make the effort to show up in person.
             <br>
             <br>
-            Note: While this is technically still the primary phase, both parties are running unopposed slates, meaning all four current candidates are expected to advance to the general 
-            election. This creates a valuable opportunity for candidates to begin clearly communicating their platforms early, giving voters more time to learn and engage. We encourage all 
-            candidates to take advantage of this head start by providing accessible, detailed information about their agendas and priorities.
+            I did speak briefly with Chris Konawel at a bi-weekly breakfast, so he is aware of this outreach and the platform I’m offering. But to date, neither candidate has provided 
+            detailed campaign information or followed up to schedule interviews. To be fair, Konawel did make some brief campaign-related statements at a breakfast and he does appear to be 
+            picking up steam on social media, but we'll see how it plays out throughout the season.
+            <br>
+            <br>
+            On the Democratic side, Heather Simmons and Dave Bailey also ran unopposed in the primary. While I haven’t been able to connect with either directly despite multiple attempts by 
+            email, phone, and mail, it’s worth noting that Dave Bailey did make an appearance at the Cumberland County Fair. That’s an example of the kind of event where connecting in person 
+            could have been possible—especially considering he and I spoke last year at Deerfield Day, where he expressed support for this project. But since filing for re-election, it’s been 
+            difficult to re-establish contact.
+            <br>
+            <br>
+            As with every race, the goal here isn’t complicated:
+            Filling out a candidate questionnaire, recording an introductory interview, and planning a more detailed conversation later in the season would take an afternoon or two at most.
+            And it doesn't have to be created through my platform: If comprehensive info exists elsewhere, I'll just copy/paste it onto my website. That’s all it takes to give voters a 
+            clear, consolidated, and accessible view of each candidate’s priorities—without having to spend weeks piecing together scattered appearances and social media posts.
+            <br>
+            <br>
+            With all four candidates expected to advance to the general election, this is the perfect time for them to step forward, clarify where they stand, and make it easy for regular 
+            voters to get informed.
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
