--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -126,38 +126,37 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
 
-          Two seats are open on the Cumberland County Board of Commissioners. On the Republican side, incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary.
-          While both attend the bi-weekly Republican breakfast meetings, the nature of those events has recently shifted. When InformTheVoteNJ began its voter education efforts 
-          two years ago, these breakfasts were presented as inclusive, civic-minded gatherings—welcoming Democrats, independents, and members of the press. After a recent article 
-          raised concerns about transparency in a local race that went unacknowledged at a township meet-and-greet, it was publicly stated at the breakfast that Democrats and the 
-          press would no longer be allowed to attend. Although I remain a registered Republican, my role in documenting these races now places me outside that circle. While the 
-          meetings still serve as a venue for regular updates and familiar Republican messaging among party loyalists, they no longer function as open forums for civic discourse 
-          across the political spectrum.
+          The general election ballot is now set: Republican incumbents Victoria Lods and Douglas Albrecht will face Democratic challengers John Capizola and Yolanda Garcia 
+          Balicki.
+        <br>
           <br>
+          This race is notable for both what has changed and what hasn’t. On one hand, Republicans have, over the past few years, been more consistently transparent and 
+          accessible—attending public events and offering opportunities for voters to hear from them directly. On the other hand, with the recent decision to make the 
+          bi-weekly Republican breakfasts Republicans-only, that relative advantage in openness will almost certainly shrink.
+         <br>
           <br>
-          Commissioner Albrecht has since completed a radio interview with InformTheVoteNJ following our podcast-style interview with Democratic candidate LaRae Smith. Commissioner 
-          Lods, for her part, has not responded to any outreach attempts.
+         For voters, this means we are heading into another election season where getting clear, reliable, and timely information may once again feel like a scavenger hunt. 
+         Part of why this project exists is because there is no centralized, official way to access *comprehensive* candidate and issues-based information when your sample 
+         ballot arrives. What should be a simple afternoon of reviewing 3rd party vetted platforms too often turns into weeks, months, or years of emails, phone calls, and tracking 
+         down events.
+        <br>
           <br>
+         Right now, Capizola and Balicki have a low transparency and accessibility rating—but that is easily fixable. Filling out a candidate questionnaire takes an hour or two. 
+         Participating in a radio interview takes another hour. Recording a longer podcast later in the season might take a few more. In other words, with an afternoon’s effort, 
+         they could make sure every Cumberland County voter has free, well-promoted access to their positions before November.
+        <br>
           <br>
-          On the Democratic side, three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are competing for two available spots. Capizola, a former appointee to the Board, 
-          and Balicki, a respected immigration attorney, initially expressed interest in participating through their campaign manager Rick Dawson. However, a significant amount of 
-          time has passed without follow-through, and it now appears they are no longer interested in participating in this public-facing transparency effort.
+        At the same time, while Lods and Albrecht are ahead of the curve thanks to past engagement, there are still four months to go, and anything can happen—politically or 
+        practically. Issues evolve, priorities shift, and if there is no longer an open-door forum for updates, we risk ending up exactly where we started two years ago: 
+        having to invest full-time hours just to be reasonably informed.
+        <br>
           <br>
+        If that is genuinely the baseline expectation for civic engagement in 2025—that citizens must piece everything together themselves—we have to ask serious questions 
+        about whether that’s a fair or sustainable system.
+        <br>
           <br>
-          In contrast, LaRae Smith has released a detailed campaign platform, launched a campaign website with scheduled public events, and recorded a full interview—setting a clear 
-          standard for accessibility and voter outreach.
-          <br>
-          <br>
-          Unfortunately, the local Democratic Party infrastructure continues to hinder broader public engagement. The county party’s website currently lists no events—not for 
-          endorsed candidates, nor for unendorsed ones—making it difficult for even loyal party members to stay informed or attend campaign activities. While the Republican 
-          breakfasts have narrowed in scope to party insiders, they are at least still functioning as a regular forum for internal updates. The local Democratic Party lacks even 
-          that level of organizational consistency, leaving their endorsed candidates with few visible avenues for voter connection or accountability.
-          <br>
-          <br>
-          With the primary fast approaching, endorsed Democratic candidates are running out of time to connect with voters, and Republican candidates—despite being unopposed—should 
-          not take their general election runway for granted. Regardless of party, voters deserve clear agendas, direct responses on well-known county issues, and a chance to 
-          compare candidates beyond party labels. After years of outreach and documentation, InformTheVoteNJ continues to track progress where it exists—and keep asking questions 
-          where it doesn’t.
+        In short, this race is wide open in terms of how transparent and responsive it could become. I’ll be watching closely—and doing my best to make sure the voters of 
+        Cumberland County don’t have to do all the work alone.
           <br>
           <br>
           Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
