e removed from patti clarks name

--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -125,10 +125,10 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Patricia Clarke-Kears</h6>
+              <h6 class="page-title">Patricia Clark-Kears</h6>
               <p>          
 
-                Patricia Clark Kears is a lifelong Millville resident with decades of professional and civic experience. She spent over 30 years with the Cumberland County Board of 
+                Patricia Clark-Kears is a lifelong Millville resident with decades of professional and civic experience. She spent over 30 years with the Cumberland County Board of 
                 Social Services, rising from an entry-level caseworker to Director of Welfare, where she managed a $30 million budget, oversaw 240 employees, and developed policies 
                 to strengthen programs supporting vulnerable residents. Earlier in her career, she helped run her family’s small business, Clark’s Liquor Store, gaining firsthand 
                 understanding of the challenges local business owners face. She holds degrees from Cumberland County College and Rider University and has pursued graduate studies 
@@ -163,10 +163,10 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Patricia Clarke-Kears</h6>
+              <h6 class="page-title">Patricia Clark-Kears</h6>
               <p>          
 
-                Patricia Clark Kears has provided a comprehensive platform detailing her background, experience, and specific proposals on a wide range of city issues. She has participated in a 
+                Patricia Clark-Kears has provided a comprehensive platform detailing her background, experience, and specific proposals on a wide range of city issues. She has participated in a 
                 full-length radio interview and has already committed to an in-depth podcast discussion closer to the election. This level of openness, responsiveness, and willingness to 
                 engage with voters meets all the criteria for the highest transparency rating on this site.
                 <br>
@@ -183,7 +183,7 @@
     
 
      <div class="title-info">
-        <h2>Patricia Clarke-Kears</h2>
+        <h2>Patricia Clark-Kears</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Millville City Commissioner</div>
@@ -238,7 +238,7 @@
      <br>
 
      <div class="video-box-modal can-sec">
-        <h3 class="video-heading">2025 InformTheVoteNJ Radio Hour With Patricia Clarke-Kears</h3>
+        <h3 class="video-heading">2025 InformTheVoteNJ Radio Hour With Patricia Clark-Kears</h3>
 
         <iframe src="https://www.youtube.com/embed/cBvJwQAgihQ?si=1mYNXWTA1ht_ugjz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
      
@@ -246,7 +246,7 @@
 
         <details style="border: 2px solid #007BFF; border-radius: 5px; padding: 1em; background-color: #E9F5FF;">
             <summary style="font-weight: bold; color: #007BFF; font-size: 1.1em;">Interview Description</summary>
-                <p>On July 8, 2025, Steven Solof hosted Patricia Clarke-Kears, candidate for Millville City Commission, for a full-length radio interview. They discussed her background in small business and social services leadership, detailed her priorities on economic development, public safety, code enforcement, and civic engagement, and explored broader challenges around voter information access and local press coverage.</p>
+                <p>On July 8, 2025, Steven Solof hosted Patricia Clark-Kears, candidate for Millville City Commission, for a full-length radio interview. They discussed her background in small business and social services leadership, detailed her priorities on economic development, public safety, code enforcement, and civic engagement, and explored broader challenges around voter information access and local press coverage.</p>
 
                 <h4>⭐ Key Takeaways</h4>
                 <ul>
@@ -458,7 +458,7 @@
             <br>
             <h4 class="sub-heading">Background and Campaign Message</h4>
             <div class="experience can-sec">
-                My name is Patricia Clark Kears and I have been a life-long resident of Millville. I am seeking a four-year seat for Millville City Commission in the November 4, 
+                My name is Patricia Clark-Kears and I have been a life-long resident of Millville. I am seeking a four-year seat for Millville City Commission in the November 4, 
                 2025 election.  My paperwork and petitions were filed with the City Clerk’s Office on February 24, 2025.
                 <br>
                 <br>
