e removed from pattis name on millville ballot

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -130,7 +130,7 @@
             candidates may file to run. That’s a lot to keep track of, and it’s still early in the season, so much of the information is yet to come in.
             <br>
             <br>
-            At this stage, incumbent Carole Cossaboon has submitted her responses to the candidate questionnaire, and Patricia Clarke-Kears has shared a detailed platform and recently appeared on 
+            At this stage, incumbent Carole Cossaboon has submitted her responses to the candidate questionnaire, and Patricia Clark-Kears has shared a detailed platform and recently appeared on 
             my radio show on July 8, 2025. Voters interested in learning more should check back throughout the campaign as additional candidates release their plans and more interviews and updates 
             are posted.
             <br>
@@ -895,7 +895,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/kears.html">Clarke-Kears</a>
+                            <a href="Candidates/kears.html">Clark-Kears</a>
                         </div>
                     </div>
 
