break tag test for kears page to avoid burger menu overlap

--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -180,7 +180,8 @@
 
 <div class="container">
 
-    
+    <br>
+    <br>
 
      <div class="title-info">
         <h2>Patricia Clark-Kears</h2>
@@ -390,7 +391,7 @@
                     <br>
                     <li>
                         <details>
-                        <summar style="color: blue;"><strong>Communication</strong></summary>
+                        <summary style="color: blue;"><strong>Communication</strong></summary>
                         <p>
                             <ul>
                             <li>Establish a “point person” to share information among commissioners and administrators via weekly reports.</li>
