small tweaks to commissioners race pages

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -186,7 +186,8 @@
 
 <div class="container">
 
-    
+    <br>
+    <br>
 
      <div class="title-info">
         <h2>Victoria K. Lods</h2>
@@ -195,8 +196,8 @@
              <div class="position">Cumberland County Comissioner</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent inactive">Incumbent</div>
-             <div class="challenger active">Challenger</div> 
+             <div class="incumbent active">Incumbent</div>
+             <div class="challenger inactive">Challenger</div> 
          </div>
      </div>
      <div class="candidate-pic-box">
@@ -235,7 +236,7 @@
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
