--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -222,7 +222,7 @@
 
 <div class="container">
 
-    
+    <br><br>
 
      <div class="title-info">
         <h2>Douglas A. Albrecht</h2>
@@ -231,8 +231,8 @@
              <div class="position">Cumberland County Commissioner</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent inactive">Incumbent</div>
-             <div class="challenger active">Challenger</div> 
+             <div class="incumbent active">Incumbent</div>
+             <div class="challenger inactive">Challenger</div> 
          </div>
      </div>
      <div class="candidate-pic-box">
@@ -252,7 +252,7 @@
             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on June 10th, 2025</p>
+                 <p>This election is on November 5th, 2025</p>
              </div>
 
              <div class="animal-box">
