--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -58,17 +58,17 @@
                             </div>
                         </div>
 
-                        <!-- <div class="accordion">
+                        <div class="accordion">
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <!-- <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
                                 <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
-                        </div> -->
+                        </div>
 
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="third">
