--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                             </div>
                         </div>
 
-                        <!-- <div class="accordion">
+                        <div class="accordion">
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <!-- <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
-                        </div> -->
+                        </div>
 
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="third">
@@ -325,6 +325,7 @@
                         <!-- <a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a>
                         <a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a>
                         <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a> -->
+                        <a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a>
 
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a>
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a>
