--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -91,6 +91,8 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+
 
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
