--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -37,14 +37,20 @@
                         
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="first">
-                            <label for="first">County Elections</label>
+                            <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                                <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
+
+                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
-                                <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                
+                                <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                 -->
                             </div>
                         </div>
 
@@ -52,22 +58,26 @@
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <!-- <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
                                 <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
                         </div>
 
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="third">
-                            <label for="third">State and National Elections</label>
+                            <label for="third">Governor and State Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="../cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
+                                <li class="link"><a href="../cc-elections/governor.html">Governor</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="../cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                 <li class="link"><a href="../cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
-                                <li class="link"><a href="../cc-elections/us_president_2024.html">US President</a></li>
+                                <li class="link"><a href="../cc-elections/us_president_2024.html">US President</a></li> -->
                             </div>
                         </div>
 
@@ -76,13 +86,24 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/governor_issues.html">Governor Issues</a></li>
+
+
+                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                 <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
                                 <li class="link"><a href="../cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
                                 <li class="link"><a href="../cc-elections/us_senate_issues.html">US Senate Issues</a></li>
                                 <li class="link"><a href="../cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
-                                <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
                             </div>
                         </div>
 
@@ -106,18 +127,24 @@
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">Vineland School Board</h6>
-          <p>This year 3 seats are open on the Vineland School Board. Eugene Medio is a Republican candidate running for re-election. He has many years of experience on the school board, spoke out in 
-            dissent against policy 5756 (Parents rights vs Trans rights related), believes that the current disciplinary system needs to be overhauled, and that we should get a new 
-            superintendent. Makema Douglas is running again this year, with most of her facebook looking like general school related posts. However, she does have a cool 
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYEvSEepLwdmAfnxymvRYYjUZNKkTF3H_MuwanbJwSvebMdw/viewform?fbclid=IwY2xjawE8mRlleHRuA2FlbQIxMAABHdMnYARk1103JuS0TRKzRA-qkmTyzlSkybmV8xoVb_tu_9goWHAzufOekA_aem_nc-Cy3vcoj_MBDoq9uadHw">google survey</a> 
-            related to the upcoming election, and we have some of her election related info from last year, so be sure to check those out. Shane Harris is a retired police officer 
-            with many years of policing experience directly related to the school system. His main focus seems to be to provide a strong, informed perspective on dealing with 
-            school safety and security. Also, Candidate Perez got into contact with us and provided that she has many years of experience in the financial field 
-            and sitting on various boards, so she will be able to bring her financial expertise to the board. She also prioritizes parental notification, helping students 
-            achieve higher test scores, and school safety. 
-            She hopes that her guidance will help teachers to focus on teaching and students to focus on learning.
-            Alix Silva is a current school board member, but we haven't been able to make contact with him, and his facebook campaign page only provides a generic campaign message, 
-            're-elect Silva'.
+          <p>Three seats are up for election on the Vineland School Board this year. Thus far, two candidates—Makema Douglas and Luz Vasquez—have officially announced their campaigns directly 
+            to InformTheVoteNJ.com. Additionally, there is a circulating rumor that Bob DeSantos may also be entering the race, though that has not yet been confirmed.
+            <br>
+            <br>
+            To help frame the key issues facing the board, we recently conducted a <a href="https://www.youtube.com/watch?v=LKBDqKGrFe8">podcast interview with sitting board member Rob Buono</a>, 
+            covering a broad range of topics including school discipline policies, the Donaldson hearing process, academic performance challenges, and NJ Policy 5756. While this was a productive 
+            and insightful conversation, we believe more voices are needed.
+            <br>
+            <br>
+            To that end, InformTheVoteNJ.com is actively seeking interviews with other sitting board members, candidates, and informed community stakeholders to ensure that the public has a 
+            clear understanding of the current challenges and priorities facing Vineland’s schools. Our goal is to help define the election’s key issues so that candidates can address them 
+            directly and transparently.
+            <br>
+            <br>
+            Although some may still view the election season as being in its early stages, Vote-by-Mail ballots begin going out on September 20th. To give voters ample time to review candidate 
+            information and attend any potential forums or meet-and-greets, we are encouraging all candidate materials to be submitted by September 1st—now just a month and a half away.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information.
           </p>
         </div>
