--- a/child_pages/cc-elections/vsb_2024_issues.html
+++ b/child_pages/cc-elections/vsb_2024_issues.html
@@ -122,12 +122,107 @@
 
     <div class="container">
         <div class="main-content-with-box-shadow-issues">
-            <h1 class="issues-h1">County Issues</h1>
+            <h1 class="issues-h1">Vineland School Board Issues</h1>
+
+            <br>
+
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">InformTheVoteNJ Interview with Robert Buono</h3>
+            
+                <iframe src="https://www.youtube.com/embed/LKBDqKGrFe8?si=hntHp9vtx0EXsK4Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Interview Summary – Rob Buono (Vineland School Board)</h2>
+                        <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                        <thead>
+                            <tr>
+                            <th style="text-align: left;">Timestamp</th>
+                            <th style="text-align: left;">Topic</th>
+                            <th style="text-align: left;">Key Takeaways</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <td>0:00</td>
+                            <td>Introduction & InformTheVoteNJ Origin Story</td>
+                            <td>Steven explains the motivation behind launching InformTheVoteNJ.com. Rob expresses shared frustration about the lack of accessible local election information.</td>
+                            </tr>
+                            <tr>
+                            <td>3:20</td>
+                            <td>Personal Background & Community Ties</td>
+                            <td>Rob shares his path from the restaurant industry to public service and reflects on two decades of listening to community concerns.</td>
+                            </tr>
+                            <tr>
+                            <td>13:20</td>
+                            <td>Standards, Truancy, and Low Expectations</td>
+                            <td>Discussion on declining standards and absenteeism. Rob emphasizes the need to raise expectations to help lift the region out of poverty.</td>
+                            </tr>
+                            <tr>
+                            <td>20:35</td>
+                            <td>School Visit Policies & Over-Compartmentalization</td>
+                            <td>Clarifies Policy No. 9010 and board ethics regarding school visits. Steven raises concerns about board members lacking firsthand insight.</td>
+                            </tr>
+                            <tr>
+                            <td>25:30</td>
+                            <td>Communication Boundaries & Confidentiality</td>
+                            <td>Rob explains what board members can and cannot publicly share. Discussion about transparency vs. executive session confidentiality.</td>
+                            </tr>
+                            <tr>
+                            <td>31:30</td>
+                            <td>Policy 5756 and Values in Decision-Making</td>
+                            <td>Rob critiques the policy as vague and misleading regarding student records. The conversation weighs student privacy against parental rights.</td>
+                            </tr>
+                            <tr>
+                            <td>39:45</td>
+                            <td>Superintendent Visibility & Public Communication</td>
+                            <td>Steven questions superintendent outreach. Rob says the superintendent is active, but constrained by other responsibilities.</td>
+                            </tr>
+                            <tr>
+                            <td>45:35</td>
+                            <td>Student Behavior, Discipline, and Accountability</td>
+                            <td>Rob explains restorative justice practices and calls for more consistent discipline and parental accountability.</td>
+                            </tr>
+                            <tr>
+                            <td>55:10</td>
+                            <td>Donaldson Hearings Explained</td>
+                            <td>Overview of the process for dismissing non-tenured teachers. Rob notes the board often defers to administrative recommendations.</td>
+                            </tr>
+                            <tr>
+                            <td>1:01:30</td>
+                            <td>Local Civics and Public Awareness</td>
+                            <td>Both advocate for reintroducing civics education. Rob supports it as an elective and acknowledges low public understanding.</td>
+                            </tr>
+                            <tr>
+                            <td>1:11:00</td>
+                            <td>County-Facilitated Candidate Information</td>
+                            <td>Steven proposes a county-run election info site. Rob agrees but says state-level changes would be necessary.</td>
+                            </tr>
+                            <tr>
+                            <td>1:12:15</td>
+                            <td>Rebuilding Local Press & Cutting Red Tape</td>
+                            <td>Rob vents about legal obstacles and bureaucracy that hinder transparency and problem-solving at the board level.</td>
+                            </tr>
+                            <tr>
+                            <td>1:16:15</td>
+                            <td>Closing Thoughts & Election Cycles</td>
+                            <td>Clarifies school board terms and upcoming elections. Rob encourages residents to stay engaged and informed.</td>
+                            </tr>
+                        </tbody>
+                        </table>
+                    </div>
+                    </details>
+            </div>    
+
+            <br>
+
             <div class="issues-short-description">
                 An organized list of issues of contention this election cycle.
             </div>
             <div class="issues-content">
-                <h3 class="issues-heading">County Level Issues</h3>
+                <h3 class="issues-heading">Vineland School Board Issues</h3>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Lack of Press Coverage</h5>
                     <div class="issues-sub-content">
