--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -51,17 +51,17 @@
                                 </div>
                             </div>
     
-                            <!-- <div class="accordion">
+                            <div class="accordion">
                                 <input type="checkbox" name="accordion" id="second">
                                 <label for="second">School Board Elections</label>
                                 <div class="nested-burger-links">
-                                    <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                    <!-- <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                     <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                     <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                    <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
+                                    <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
                                     <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                                 </div>
-                            </div> -->
+                            </div>
     
                             <div class="accordion">
                                 <input type="checkbox" name="accordion" id="third">
@@ -83,7 +83,8 @@
                                 <label for="fourth">Issues</label>
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
                                     <!-- <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
