--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -189,7 +189,7 @@
 
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 4th, 2025</h3>
-            <h2>SAMPLE BALLOT</h2>
+            <!-- <h2>SAMPLE BALLOT</h2>
             <h3>Below is only an interactive ballot designed to help voters using this website to organize their choices based on specific positions. Please visit 
             our <a href="../cc-elections/official_ballots_2024.html">Official Ballots Page</a> or click the foldout below to become familiar with what you 
             will see in the voting booth.</h3>
@@ -197,7 +197,7 @@
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Millville Municipal Ballot</summary>                          
                 <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
                 <img src="../../../assets/screenshots/ballots/millvilleBallot.png" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-            </details>
+            </details> -->
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>MILLVILLE CITY COMMISSIONERS</h3>
             <h4>Independent</h4>
